2010-02-10 23:29 -0800  Brendan Cully  <brendan@kublai.com>  (b7ec848af36b)

	* doc/manual.xml.head: Fix a typo (closes #3379)

2010-02-01 23:40 -0800  Antonio Radici  <antonio@dyne.org>  (e9965b78e92d)

	* po/sv.po: The Swedish translation has a suboptimal
	translation of the word "Bad" in several places. The proposed patch
	substitutes Dålig (which implies bad "as in quality", and not bad
	"as in error") for Felaktig (erroneous).

	Closes #3370.

	* init.h: Small fix to the muttrc manpage. Closes #3374

2010-01-13 19:12 +0100  Matthias Andree  <matthias.andree@gmx.de>  (e2c60de29015)

	* configure.ac: Fix hcache build on systems with $(EXEEXT), include it
	in mutt_md5.

2009-12-29 00:33 -0500  Brendan Cully  <brendan@kublai.com>  (31881f38ca1e)

	* curs_lib.c: Hack mutt_wstr_trunc to treat M_TREE characters as 1
	cell. Closes #3364.

2009-12-28 22:13 -0500  Brendan Cully  <brendan@kublai.com>  (359de549b2d1)

	* doc/manual.xml.head: Remove spurious quotes from query_command
	example. Closes #3365.

2009-12-14 10:24 -0800  Brendan Cully  <brendan@kublai.com>  (736b6af3c5f1)

	* rfc1524.c: Fix off-by-one errors in mailcap parser.
	Closes #3362

2009-12-10 22:52 -0800  Daniel Jacobowitz  <dan@debian.org>  (b7d2cb7c7ce1)

	* hcache.c: Do not store header color in hcache. If the color
	directive is removed from muttrc, the cached value from the last
	directive would otherwise still be in effect.

2009-12-07 23:08 -0800  Patrick Welche  <prlw1@cam.ac.uk>  (1cf34ea1f128)

	* mutt_ssl.c: STACK* is not defined with newer SSL, use
	STACK_OF instead. Closes #3356.

2009-12-07 22:46 -0800  Peter Rosin  <peda@lysator.liu.se>  (fc9563de3dcb)

	* snprintf.c: Output %p as unsigned in the bundled snprintf

2009-11-14 14:31 -0800  Brendan Cully  <brendan@kublai.com>  (6928f522ac48)

	* curs_main.c: Back out e67f4c347bb4.

	I could not reproduce the problem, and the change makes it
	impossible to change to a real folder when no folder is currently
	open.
